# F1tenth-UFL

./: README.md
Object detection and depth estimation/: README.md
Object detection and depth estimation/catkin_ws/devel/: .catkin
Object detection and depth estimation/catkin_ws/devel/lib/joy/: joy_node
Object detection and depth estimation/catkin_ws/devel/lib/laser_proc/: laser_proc
Object detection and depth estimation/catkin_ws/devel/lib/pkgconfig/: ackermann_cmd_mux.pc  ackermann_msgs.pc  f110_description.pc  gap_finding.pc  joy.pc  lab_pure_pursuit.pc  laser_proc.pc  particle_filter.pc  race.pc  racecar.pc  racecar_control.pc  racecar_description.pc  racecar_gazebo.pc  serial.pc  urg_node.pc  vesc_ackermann.pc  vesc_driver.pc  vesc_msgs.pc  wall_following.pc  waypoint_logger.pc
Object detection and depth estimation/catkin_ws/devel/lib/serial/: serial_example
Object detection and depth estimation/catkin_ws/devel/lib/urg_node/: getID  urg_node
Object detection and depth estimation/catkin_ws/devel/lib/vesc_ackermann/: ackermann_to_vesc_node  vesc_to_odom_node
Object detection and depth estimation/catkin_ws/src/f110-fall2018-skeltons/labs/wall_following/: CMakeLists.txt
Object detection and depth estimation/catkin_ws/src/f110-fall2018-skeltons/labs/wall_following/launch/: car_follow.launch  connection.launch  real_world_wall_following_cam.launch  test.launch
Object detection and depth estimation/catkin_ws/src/f110-fall2018-skeltons/labs/wall_following/scripts/: car_dead_mans_switch.py  car_follow_dead_mans_switch.py  control.py  dead_mans_switch_joystick.py  detect.py  detect2.py  pid_error.py  pub.py  sub.py  zedDepth.py  zedVideo.py
Object detection and depth estimation/catkin_ws/src/f110-fall2018-skeltons/labs/wall_following/scripts/utils/: datasets.py  general.py  other.py  torch_utils.py
Object detection and depth estimation/catkin_ws/src/f110-fall2018-skeltons/labs/wall_following/scripts/utils/wandb_logging/: wandb_utils.py
Object detection and depth estimation/catkin_ws/src/f110-fall2018-skeltons/labs/wall_following/src/: listener.cpp  mat_extractor.cpp  talker.cpp  talker_old.cpp
Path Planning/catkin_ws/src/pure_pursuit_controller/: CMakeLists.txt
(+78 files in other folders)
